k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sweb-monitoring-service
spec:
  ports:
    - port: 5000
  selector:
    app: sweb-monitoring
